[tool.poetry]
name = "windows_enrollment"
version = "1.0.0"
license = ""
description = ""
readme = "README.md"
authors = ["Developer <cu.18bcs2174@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "0.20.4"
uvicorn = "0.18.2"
pydantic ="1.10.4"
xmltodict = "0.13.0"
pyOpenSSL = "20.0.1"
httpx = "0.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"




